
          Release Notes for Bacula 1.32

  Bacula code: Total files = 259 Total lines = 76,690 (*.h *.c *.in)

Major Changes this Release:
- Fixed gnome-console to compile with RH9 (Gnome 2.0)
- Implemented a single routine to read_records.
- Implemented forward space file/block whenever possible.
- Added SDConnectTimeout to FD.    


Other Changes this Release:
- Lots of doc enhancements
- Fixed a PurgeOldestVolume bug (VolStatus not returned)
- Don't crash if DB address record not specified.
- Return VolStatus on find_next_volume.
- Use alist for incexe name_list.
- Use bget_dirmsg() everywhere possible when talking to FD.
- Delete old semaphore job and workq job scheduling code.
- edit_run_codes in one place (/lib)  Add Job name
- Update query.sql to find current backups correctly.
- Correct ambiguous SQL statement for prunning.
- Set heartbeat interval to zero by default.
- Fix a possible race condition in stopping the 
  heartbeat thread.
- Eliminate gnome2-console directory. Everything is in gnome-console
- Enhanced "packet too big" message to indicate who sent it.


Items to note:  !!!!!